<resources>
    <string name="app_name">BetProfessor</string>
    <string name="results">results</string>
    <string name="input_statistic">input statistic</string>
    <string name="search">search</string>
    <string name="tv_win_percentage">PCT:</string>
    <string name="percentage">%</string>
    <string name="tv_colon">:</string>
    <string name="result_deleted">Result was deleted successfully</string>
    <string name="undo_operation">UNDO</string>
    <string name="result_recovered">Result was recovered successfully</string>
    <string name="result_activity_title">Results</string>
    <string name="tv_date">Date?</string>
    <string name="btn_date">DATE</string>
    <string name="spread">spread</string>
    <string name="home_line">home line</string>
    <string name="team_total">team total</string>
    <string name="result">result</string>
    <string name="guest_line">guest line</string>
    <string name="add_result">Add result</string>
    <string name="home_team_name">home team</string>
    <string name="guest_team_name">guest team</string>
    <string name="edit_result">Edit result</string>
    <string name="delete_all_results">delete all results</string>
    <string name="dialog_title">Attention!</string>
    <string name="dialog_message">Do you REALLY want to delete ALL results?</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_yes">yes</string>
    <string name="team_total_tips">Team total tips</string>
    <string name="amount_of_games">amount of games:</string>
    <string name="average_team_total">average team total</string>
    <string name="middlemost_result">middlemost result (</string>
    <string name="last_game">last game</string>
    <string name="middlemost_measure">middlemost measure:</string>
    <string name="statistic">statistic</string>
    <string name="line_tips">Line tips</string>
    <string name="new_measure">new measure</string>
    <string name="cancel">cancel</string>
    <string name="apply">apply</string>
    <string name="btn_save">save</string>
    <string name="input_statistic_title">Input statistic</string>
    <string name="team_total_statistic">Team total statistic</string>
    <string name="handicap_statistic">Handicap statistic</string>
    <string name="line_statistic">Line statistic</string>
    <string name="btn_dialog_ok">ok</string>
    <string name="search_for_team">Team?</string>
    <string name="find_all_teams_games">find all team`s games</string>
    <string name="FTF_meetings">FTF meetings</string>
    <string name="first_team">First team?</string>
    <string name="Face_To_Face_Meetings">Face-To-Face Meetings</string>
    <string name="choose_the_teams">Choose the teams, please</string>
    <string name="wrong_choice">Wrong choice!</string>
    <string name="second_team">Second team?</string>
    <string name="team_results">team results</string>
    <string name="stats">stats</string>
    <string name="face_to_face_meetings">face-to-face meetings</string>

    <string-array name="arrayOfTeamNames">
        <item>Atlanta Hawks</item>
        <item>Boston Celtics</item>
        <item>Brooklyn Nets</item>
        <item>Charlotte Hornets</item>
        <item>Chicago Bulls</item>
        <item>Cleveland Cavaliers</item>
        <item>Dallas Mavericks</item>
        <item>Denver Nuggets</item>
        <item>Detroit Pistons</item>
        <item>Golden State Warriors</item>
        <item>Houston Rockets</item>
        <item>Indiana Pacers</item>
        <item>Los Angeles Lakers</item>
        <item>Los Angeles Clippers</item>
        <item>Memphis Grizzlies</item>
        <item>Miami Heat</item>
        <item>Milwaukee Bucks</item>
        <item>Minnesota Timberwolves</item>
        <item>New Orleans Pelicans</item>
        <item>New York Knicks</item>
        <item>Oklahoma City Thunder</item>
        <item>Orlando Magic</item>
        <item>Philadelphia 76ers</item>
        <item>Phoenix Suns</item>
        <item>Portland Trail Blazers</item>
        <item>Sacramento Kings</item>
        <item>San Antonio Spurs</item>
        <item>Toronto Raptors</item>
        <item>Utah Jazz</item>
        <item>Washington Wizards</item>
    </string-array>

</resources>
