<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/results"
        android:orderInCategory="100"
        android:title="@string/results"
        app:showAsAction="never"/>

    <item
        android:id="@+id/searchForTeamGames"
        android:orderInCategory="200"
        android:title="@string/find_all_teams_games"
        app:showAsAction="never"/>

    <item
        android:id="@+id/searchForFaceToFaceMeetings"
        android:orderInCategory="300"
        android:title="@string/face_to_face_meetings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/input_statistic"
        android:orderInCategory="400"
        android:title="@string/input_statistic"
        app:showAsAction="never"/>

</menu>