<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditResultActivity">

    <TextView
        android:id="@+id/tv_edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_date"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_edit_date"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_date"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_date"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:rippleColor="@color/colorAccent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_home_team"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/til_edit_home_team_total"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_date">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/home_team"
            style="@style/EditTextHintColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/home_team_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_home_spread"
        style="@style/TextInputLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_home_team">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/home_team_edit_spread"
            style="@style/EditTextHintColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/spread"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_home_line"
        style="@style/TextInputLayout"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/til_edit_home_team_total"
        app:layout_constraintStart_toEndOf="@+id/til_edit_home_spread"
        app:layout_constraintTop_toTopOf="@+id/til_edit_home_spread">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/home_edit_line"
            style="@style/EditTextHintColor"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:hint="@string/home_line"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_home_team_total"
        style="@style/TextInputLayout"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/til_edit_home_line">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/home_team_edit_total"
            style="@style/EditTextHintColor"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:hint="@string/team_total"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_home_team_result"
        style="@style/TextInputLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/til_edit_home_spread"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_home_spread">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/home_team_edit_result"
            style="@style/EditTextHintColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/result"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_guest_team_result"
        style="@style/TextInputLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/til_edit_home_spread">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/guest_team_edit_result"
            style="@style/EditTextHintColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/result"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_guest_spread"
        style="@style/TextInputLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/til_edit_guest_team_result"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/til_edit_guest_team_result">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/guest_team_edit_spread"
            style="@style/EditTextHintColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/spread"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_guest_line"
        style="@style/TextInputLayout"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_edit_guest_spread"
        app:layout_constraintEnd_toStartOf="@+id/til_edit_guest_team_total"
        app:layout_constraintStart_toEndOf="@+id/til_edit_guest_spread">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/guest_edit_line"
            style="@style/EditTextHintColor"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:hint="@string/guest_line"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edit_guest_team_total"
        style="@style/TextInputLayout"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_edit_guest_line"
        app:layout_constraintEnd_toStartOf="@+id/guideline2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/guest_team_edit_total"
            style="@style/EditTextHintColor"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:hint="team total"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_guest_team"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/til_edit_guest_spread"
        app:layout_constraintEnd_toEndOf="@+id/til_edit_guest_team_total"
        app:layout_constraintStart_toStartOf="@+id/guideline">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/guest_team"
            style="@style/EditTextHintColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/guest_team_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_edit_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>