<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddResultActivity">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_date"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_date"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_date"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_date"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:rippleColor="@color/colorAccent" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/home_team_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_background"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/btn_date" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_home_spread"
        style="@style/TextInputLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/home_team_spinner">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/home_team_spread"
            style="@style/EditTextHintColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/spread"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_home_line"
        style="@style/TextInputLayout"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/til_home_team_total"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_home_spread"
        app:layout_constraintTop_toTopOf="@+id/til_home_spread">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/home_line"
            style="@style/EditTextHintColor"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:hint="@string/home_line"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_home_team_total"
        style="@style/TextInputLayout"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_home_line"
        app:layout_constraintTop_toTopOf="@+id/til_home_line">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/home_team_total"
            style="@style/EditTextHintColor"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:hint="@string/team_total"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_home_team_result"
        style="@style/TextInputLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/til_home_spread"
        app:layout_constraintTop_toBottomOf="@+id/til_home_spread">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/home_team_result"
            style="@style/EditTextHintColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/result"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_guest_team_result"
        style="@style/TextInputLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/til_home_spread">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/guest_team_result"
            style="@style/EditTextHintColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/result"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_guest_spread"
        style="@style/TextInputLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/til_guest_team_result"
        app:layout_constraintEnd_toStartOf="@+id/til_guest_line"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/til_guest_team_result">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/guest_team_spread"
            style="@style/EditTextHintColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/spread"
            android:inputType="numberSigned|numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_guest_line"
        style="@style/TextInputLayout"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_guest_spread"
        app:layout_constraintEnd_toStartOf="@+id/til_guest_team_total"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_guest_spread">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/guest_line"
            style="@style/EditTextHintColor"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:hint="@string/guest_line"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_guest_team_total"
        style="@style/TextInputLayout"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/til_guest_line"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_guest_line">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/guest_team_total"
            style="@style/EditTextHintColor"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:hint="team total"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/guest_team_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_background"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="2dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/til_guest_spread"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>